k8s/analytics-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
  namespace: analytics
  labels:
    app.kubernetes.io/name: analytics-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: analytics-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: analytics-service
    spec:
      containers:
      - name: analytics-service
        image: 657333849558.dkr.ecr.us-east-1.amazonaws.com/tooglemaster/analytics-service:latest
        ports:
        - containerPort: 8005
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
