k8s/analytics-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: analytics
spec:
  selector:
    app.kubernetes.io/name: analytics-service
  ports:
  - name: http
    protocol: TCP
    port: 8005
    targetPort: 8005
